# adaptive-tg-qgrams

./: .gitignore  LICENSE  README.md  chaosuanshiyong.md  global_idf算法.md  整体项目概述.md
simulation-code/: README.md  advanced_comparison.py  bigrams_10000_1000.sh  compare_methods.py  incr_entropy.py  is_palindrome.py  is_palyndrome.py  pyproject.toml  requirements.txt  requirements_comparison.txt  simidf_10000_1000.sh  simidf_art.py  submit_test.sh  test_gen_palindrome.py  test_gen_palindrome_backup.py  test_gen_palindrome_copy.py  test_gen_palyndrome.py  test_gen_triangle.py  test_supercomputer.sh  tfidf_10000_1000.sh  tfidf_2grams.py  triangle_type.py  utils.py  近似idf.txt
simulation-code/compare/: comparison_simidf_vs_bigrams_100.txt  comparison_simidf_vs_bigrams_1000.txt  comparison_simidf_vs_bigrams_10000.txt  comparison_simidf_vs_tfidf_1000.txt  comparison_tfidf_vs_bigrams_100.txt  comparison_tfidf_vs_bigrams_1000.txt  comparison_tfidf_vs_simidf_100.txt  comparisons_summary.csv  single_method_bigrams_100.txt  single_method_bigrams_1000.txt  single_method_bigrams_10000.txt  single_method_simidf_100.txt  (+5 more)
web-application-code/: Dockerfile  README.md  README_CN.md  Vagrantfile  analyze.py  analyze_coverage.py  config.py  config_variables.py  download_all_apps.sh  execute_test_suite.py  global_log.py  main.py  pyproject.toml  run_analysis.sh  run_experiments.sh  test_final_integration.py  test_generator_functionality.py  test_main_integration.py  test_new_generators.py  type_aliases.py  说明_analyze.txt  说明_excutors.txt  说明_main.txt  说明_整个web项目.md  超算作业提交参考.sh
(+100 files in other folders)
