[tool.poetry]
name = "web-application-code"
version = "0.1.0"
description = ""
authors = ["anon <anon@anon.com>"]
readme = "README.md"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.19"
docker = "7.1.0"
javalang = "0.13.0"
pydot = "^2.0.0"
networkx = "3.1"
numpy = "1.22.0"
tqdm = "^4.66.4"
edit-distance = "^1.0.6"
matplotlib = "3.7.5"
scipy = "1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"


[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
